--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 * {
-  margin: 0;
+  /* margin: 0; */
   padding: 0;
   box-sizing: border-box;
 }
@@ -46,3 +46,4 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
